--- a/Untitled8.ipynb
+++ b/Untitled8.ipynb
@@ -393,9 +393,7 @@
         "        current_chunk = []\n",
         "    else:\n",
         "      continue\n",
-        "  return continuous_chunk\n",
-        "my_sent = \"WASHINGTON -- In the wake of a Bangalore of abuses by New York police officers in the 1990s, Loretta E. Lynch, the top federal prosecutor in Brooklyn, spoke forcefully about the pain of a broken trust that African-Americans felt and said the responsibility for repairing generations of miscommunication and mistrust fell to law enforcement.\"\n",
-        "get_continuous_chunks(my_sent)"
+        "  return continuous_chunk\n"
       ],
       "execution_count": 114,
       "outputs": [
@@ -422,13 +420,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "6b107464-36cc-4254-dd0c-f688a4b9546d"
+        "outputId": "f927160b-5522-49e2-ab6e-108d34de9bff"
       },
       "source": [
-        "string=\"I will meet you at 5:30 am in Bangalore\"\n",
-        "\n",
-        "sentences=nltk.word_tokenize(string)\n",
-        "print get_continuous_chunks(string)\n",
+        "string=\"I will meet you at 5:30 am in Bangalore and Delhi and New Delhi will be good \"\n",
+        "sentences=nltk.sent_tokenize(string)\n",
+        "sentence=nltk.word_tokenize(string)\n",
+        "c=get_continuous_chunks(string)\n",
+        "print c\n",
         "matches=datefinder.find_dates(string)\n",
         "for match in matches:\n",
         "  print \"Date:\",match.day,calendar.month_name[match.month]\n",
@@ -439,12 +438,12 @@
         "  print match\n",
         "  "
       ],
-      "execution_count": 113,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[]\n",
+            "['Bangalore', 'Delhi', 'New Delhi']\n",
             "Date: 23 May\n",
             "Time: 5 : 30 am\n",
             "2019-05-23 05:30:00\n"
